[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securefilekit"
version = "0.1.0"
description = "CLI de criptografia simétrica/assimétrica e hash para arquivos"
requires-python = ">=3.9"
dependencies = ["cryptography>=42.0"]
authors = [{name="Your Name"}]
